--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,111 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<script src="../static/main.css"></script>
-<style type="text/css">
-*{
- font-size:12px;
-}
-h3{
-font-size:20px;
-}
-ul,li{
- padding:0;
- margin:0;
- line-height:150%;
-}
+	<title>应用首页</title>
+	<meta charset="utf-8" />
+	<link href="css/style.css" type="text/css" />
+	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
+	<style type="text/css">
+        html, body{
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
+        h1,h2,h3,h4,h5,h6,h7{
+            margin:0;
+        }
 
-ul{
- padding-left:20px;
-}
-h5{
-padding:0;
-margin:0;}
-</style>
+        .mTop ul, .mTop li{
+            padding:0;
+            margin:0;
+        }
+        .mTop li{
+            float:left;
+            list-style-type:none;
+        }
+        #ctLeft h3 {
+            background:#b6ff00;
+
+        }
+        #ctLeft ul, #ctLeft li; {
+        padding: 0;
+        margin: 0;
+        }
+        #ctLeft li {
+            padding: 0;
+            margin: 0;
+            list-style-type:none;
+        }
+    </style>
+    <script type="text/javascript">
+        function resizeWindow() {
+            var htBody = $("body").height();
+            var htHeader = $("#ctHeader").height();
+            var htContent = htBody - htHeader;
+            var wBody = $("html").width();
+            var wLeftMenu = $("#ctLeft").width();
+            var wContent = wBody - wLeftMenu-2;
+            $("#ctLeft,#ctContent,#frmContent,#ctSplit").height(htContent);
+            $("#ctContent").width(wContent);
+        }
+        $(function () {
+            resizeWindow();
+            $(window).resize(function () {
+                setTimeout(resizeWindow, 10);
+            });
+        });
+    </script>
 </head>
 <body>
-	<div id="dvHeader">
-		这儿是头部信息
-		<div>
-			<a>测试数据</a> | <a>测试数据</a> | <a>测试数据</a> | <a>测试数据</a> | <a>测试数据</a> |
-			<a>测试数据</a>
-		</div>
-	</div>
-	<div style="float: left; width: 150px">
-		<h5>测试功能</h5>
-		<ul>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-		</ul>
-		<h5>测试功能</h5>
-		<ul>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-		</ul>
-		<h5>测试功能</h5>
-		<ul>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-			<li>测试功能1</li>
-		</ul>
-	</div>
-	<div>
-		<div>当前位置:首页 > 系统管理  > 权限管理</div>		
-		<h3>权限管理</h3>
-		<table>
-			<tr>
-				<th>姓名</th>
-				<td><input /></td>
-				<th>姓名</th>
-				<td><input /></td>
-				<th>姓名</th>
-				<td><input /></td>
-				<td><button>查询</button></td>
-			</tr>
-		</table>
-		<div>
-		<div>
-			<a href="#">添加</a>
-			<a href="#">删除</a>
-			<a href="#">导出</a>
-		</div>		
-		<table>
-			<tr>
-			 <th>序号</th>
-			 <th>序号</th>
-			 <th>序号</th>
-			 <th>序号</th>
-			 <th>序号</th>
-			 <th>序号</th>
-			 <th>序号</th>
-			</tr>
-			<tr>
-			 <td>序号</td>
-			 <td>序号</td>
-			 <td>序号</td>
-			 <td>序号</td>
-			 <td>序号</td>
-			 <td>序号</td>
-			 <td>序号</td>
-			</tr>
-		</table>
-		</div>
-	</div>
+    <div id="ctHeader">
+        <h3>基础框架</h3>
+        <div class="mTop" style="background-color:#00ff90">
+            <ul>
+                <li>首页</li>
+                <li>|</li>
+                <li>应用管理</li>
+                <li>|</li>
+                <li>流程管理</li>
+                <li>|</li>
+                <li>系统监控</li>
+            </ul>
+        </div>
+        <div style="clear:both;"></div>
+        <div style="background:red;border-bottom:solid 1px #808080;height:2px;"></div>
+    </div>
+    <div>
+        <div id="ctLeft" style="float:left;width:150px;">
+            <h3>菜单管理</h3>
+            <ul>
+                <li><a href="http://www.baidu.com" target="frmContent">用户管理</a></li>
+                <li><a href="list.html" target="frmContent">用户管理</a></li>
+            </ul>
+        </div>
+        <div id="ctSplit" style="float:left;width:2px;background-color:gray;">
+        </div>
+        <div id="ctContent" style="overflow:hidden">
+            <iframe name="frmContent" id="frmContent" src="list.html" scrolling="auto" frameborder="0" width="100%" marginheight="0" marginwidth="0"></iframe>
+        </div>
+
+    </div>
 </body>
 </html>
