--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -8,6 +8,7 @@
 	<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
 	<script src="js/vue.js" type="text/javascript"></script>
 	<script src="js/vue-resource.js" type="text/javascript"></script>
+	<script src="js/vee-validate/vee-validate.min.js" type="text/javascript"></script>
 	<script src="plugin/jQueryUI/jquery-ui.js" type="text/javascript"></script>
 	<script src="plugin/jqGrid/js/i18n/grid.locale-en.js" type="text/javascript"></script>
 	<script src="plugin/jqGrid/js/jquery.jqGrid.min.js" type="text/javascript"></script>
@@ -15,23 +16,25 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="plugin/jqGrid/css/ui.jqgrid.css" />
 </head>
 <body>
+<form>
    <table>
 	   <tr>
 		   <th>测试字段1</th>
 		   <td><input name="Field1" type="text" /></td>
 		   <th>测试字段1</th>
-		   <td><input name="Field1" type="text" /></td>
+		   <td><input name="Field2" type="text" /></td>
 	   	</tr>
 	   	 <tr>
 		   <th>测试字段1</th>
-		   <td><input name="Field1" type="text" /></td>
+		   <td><input name="Field3" type="text" /></td>
 		    <th>测试字段1</th>
-		   <td><input name="Field1" type="text" /></td>
+		   <td><input name="Field4" type="text" /></td>
 	   	</tr>
    </table>
    <div style="text-align:center;">
    	 <button>保存</button>
    	 <button onclick="window.close()">取消</button>
    </div>
+   </form>
 </body>
 </html>
